[package]
name = "i6"
version = "0.1.6" # prepare_release.sh
edition = "2021"
license = "MIT"
authors = ["kruserr"]
readme = "README.md"
repository = "https://github.com/kruserr/i6"
description = "A collection of tools"
keywords = ["cli", "terminal", "utility", "tool", "command"]
categories = ["command-line-interface", "command-line-utilities", "development-tools"]

[dependencies]
clap = "3"

# for http and https commands
tokio = { version = "1", features = ["full"] }
# warp = "0.3"
tracing-subscriber = "0.3.18"
# for https command
warp = { version = "0.3", features = ["default", "tls"] }
openssl = "0.10"

# for db command
rapiddb-web = "0.1"

[lints.rust]
unused_parens = "allow"

[lints.clippy]
needless_return = "allow"
