[workspace]
resolver = "2"

members = [
  "i6-pack",
  "i6-pack-gui",
  "i6-http",
  "i6-timer",
  "i6-shell",
  "i6",

  # Internal
  # "examples",
]

[workspace.lints.rust]
unused_parens = "allow"
unused_imports = "allow"

[workspace.lints.clippy]
needless_return = "allow"
implicit_saturating_sub = "allow"
single_component_path_imports = "allow"
