[package]
name = "i6-http"
version = "0.1.18" # prepare_release.sh
edition = "2021"
license = "AGPL-3.0"
authors = ["kruserr"]
readme = "../README.md"
repository = "https://github.com/kruserr/i6"
description = "A tool to host a http or https server in present working directory"
keywords = ["cli", "terminal", "utility", "tool", "command"]
categories = ["command-line-interface", "command-line-utilities", "development-tools"]

[lints]
workspace = true

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = { version = "0.3", features = ["default", "tls"] }
tracing-subscriber = "0.3"
rcgen = "0.13"
