[package]
name = "i6-pack"
version = "0.1.12" # prepare_release.sh
edition = "2021"
license = "AGPL-3.0"
readme = "../README.md"
description = "Compress and encrypt a folder, or decrypt and decompress an archive"

[lints]
workspace = true

[dependencies]
clap = "4"
tar = "0.4"
zstd = "0.13"
aes-gcm = "0.10"
rand = "0.8"
hmac = "0.12"
uuid = {version = "1", features = ["v4"]}
argon2 = "0.5"
rpassword = "7"
