[package]
name = "i6-pack"
version = "0.1.16" # prepare_release.sh
edition = "2021"
license = "AGPL-3.0"
authors = ["kruserr"]
readme = "../README.md"
repository = "https://github.com/kruserr/i6"
description = "A tool to compress and optionally encrypt files"
keywords = ["cli", "terminal", "utility", "tool", "command"]
categories = ["command-line-interface", "command-line-utilities", "development-tools"]

[lints]
workspace = true

[dependencies]
clap = "4"
tar = "0.4"
zstd = {version = "0.13", features = ["zstdmt"]}
aes-gcm = "0.10"
rand = "0.8"
hmac = "0.12"
uuid = {version = "1", features = ["v4"]}
argon2 = "0.5"
rpassword = "7"
walkdir = "2"
num_cpus = "1"
