[package]
name = "i6"
version = "0.1.10" # prepare_release.sh
edition = "2021"
default-run = "i6"
license = "AGPL-3.0"
authors = ["kruserr"]
readme = "README.md"
repository = "https://github.com/kruserr/i6"
description = "A collection of tools"
keywords = ["cli", "terminal", "utility", "tool", "command"]
categories = ["command-line-interface", "command-line-utilities", "development-tools"]

[lints]
workspace = true

[dependencies]
clap = "3"

# for http and https commands
tokio = { version = "1", features = ["full"] }
# warp = "0.3"
tracing-subscriber = "0.3"
# for https command
warp = { version = "0.3", features = ["default", "tls"] }
openssl = "0.10"

i6-pack = { version = "0.1", path = "../i6-pack" }

# for db command
rapiddb-web = "0.1"

# for reader command
rustic-reader = "0.1"
