[package]
name = "i6"
version = "0.1.18" # prepare_release.sh
edition = "2021"
default-run = "i6"
license = "AGPL-3.0"
authors = ["kruserr"]
readme = "../README.md"
repository = "https://github.com/kruserr/i6"
description = "A collection of cross platform portable cli tools"
keywords = ["cli", "terminal", "utility", "tool", "command"]
categories = ["command-line-interface", "command-line-utilities", "development-tools"]

[lints]
workspace = true

[dependencies]
clap = "4"

i6-pack = { version = "0.1", path = "../i6-pack" }
i6-http = { version = "0.1", path = "../i6-http" }
i6-timer = { version = "0.1", path = "../i6-timer" }
i6-shell = { version = "0.1", path = "../i6-shell" }

# for db command
# rapiddb-web = "0.1"

# for reader command
# rustic-reader = "0.1"
